# wordle-solver

./: Cargo.toml  Makefile  less-less-english-words.txt
benches/: first_guess.rs  outcome_bench.rs
src/: dictionary.rs  error.rs  guess_generator.rs  guess_result.rs  io.rs  lib.rs  main.rs  models.rs  rank.rs
