[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
lazy_static = "1.4.0"

[[bench]]
name = "first_guess"
harness = false
debug = true

[profile.bench]
debug = true

[profile.release]
debug = true
