[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"
lazy_static = "1.4.0"

[[bench]]
name = "first_guess"
harness = false

[profile.bench]
debug = true
